[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="QuadMesh" id=3]

[sub_resource type="MeshTexture" id=4]
mesh = SubResource( 3 )
image_size = Vector2( 255, 82 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 1 )
text = "Coin Dash!"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 52.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "0"
valign = 1

[node name="TimeLabel" type="Label" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
valign = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -126.0
margin_top = -120.0
margin_right = 126.0
margin_bottom = -42.0
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="TouchScreenButton" type="TouchScreenButton" parent="StartButton"]
position = Vector2( -1, -1 )
normal = SubResource( 4 )
visibility_mode = 1

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="StartButton/TouchScreenButton" to="." method="_on_StartButton_pressed"]
